2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

Wed Mar 05 15:11:49 2003  George Lebl <jirka@5z.com>

	* configure.in, daemon/Makefile.am, gui/Makefile.am,
	  gui/greeter/Makefile.am, utils/Makefile.am,
	  vicious-extensions/Makefile.am, daemon/slave.c, daemon/choose.c:
	  Fix Solaris build, a patch from Niall Power <Niall.Power@Sun.COM>

2003-03-03  Ross Golder <rossg@golder.org>

	* gui/gdmlanguage.c, config/locale.alias: Added language support
	  for these languages - Mongolian, Indonesian, Kannada, Hindi
	  Bengali, Belarusian, Bosnian, Welsh, Persian, Interlingua,
	  Albanian, Serbian, Yiddish and Panjabi.

Fri Feb 28 12:32:37 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: hmmm xdmcp/PingInterval was not present
	  here so add

Fri Feb 28 12:29:51 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.h: raise DisplaysPerHost to default
	  to 2.

2003-02-26  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to ALL_LINGUAS

2003-02-26  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" back after fixing the bug.

2003-02-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Disabled "fa" as it's broken and breaks the
	build.

2003-02-18  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-17  Sanlig Badral  <badral@chinggis.com>

	* gui/gdmlanguage.c, config/locale.alias: Added Mongolian

2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/verify-crypt.c: Fix typo in comment.
	* daemon/verify-pam.c: Same.
	* daemon/verify-shadow: Here too.
	
2003-02-13  Ross Golder <rossg@golder.org>

	* configure.in, gui/gdmlanguage.c, locale.alias: Added Thai
	  language support.

Mon Feb 03 09:18:01 2003  George Lebl <jirka@5z.com>

	* Release 2.4.1.3

Mon Feb 03 09:16:10 2003  George Lebl <jirka@5z.com>
