@@ -1,3 +1,8 @@
+2003-03-15  Ross Golder <ross@golder.org>
+
+	* config/locale.alias, gui/gdmlanguages.c: Sorted into proper
+	  alphabetic order. (fixes #106293)
+
 2003-03-13  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "ml" to ALL_LINGUAS.
